src/objects/Return_VO_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Converted_Item_Cost__c</fullName>
        <formula>IF(
    AND(
    Return_VO_Header__r.Vendor__r.Is_Foreign_Vendor__c,
    Return_VO_Header__r.FX_Conversion_Rate__c &lt;&gt; 0
    ),
    IF(
    $Setup.General_Configurations__c.Enable_Xero_Accounting__c,
    ((Item_Cost__c * Return_Qty__c)
    /Return_VO_Header__r.Backward_Conversion_Rate__c),
    Item_Cost__c * Return_Qty__c
    *Return_VO_Header__r.FX_Conversion_Rate__c
    ),
    Item_Cost__c * Return_Qty__c
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Item Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <formula>IF(TEXT(Return_CR_Line_Item__r.Return_CR_Header__r.Status__c) == &apos;Credited&apos;, &apos;Credited&apos;, &apos;Pending&apos;)</formula>
        <label>Credit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
	    <fullName>Variance__c</fullName>
        <formula>IF(
            Return_Qty__c &lt;&gt; 0,
            Inventory_Cost__c - 
             Return_CR_Line_Item__r.Converted_Credit_Cost__c,0
        )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inventory_Cost__c</fullName>
        <label>Inventory Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Cost__c</fullName>
        <label>Item Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Desc__c</fullName>
        <formula>Item__c +&quot; - &quot; +   Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item/Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Return_VO_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Return VO Line Items</relationshipLabel>
        <relationshipName>Return_VO_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Return_CR_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Return CR Line Item</label>
        <referenceTo>Return_CR_Line_Item__c</referenceTo>
        <relationshipLabel>Return VO Line Items</relationshipLabel>
        <relationshipName>Return_VO_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Return_Qty__c</fullName>
        <label>Return Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Return_VO_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Return VO Header</label>
        <referenceTo>Return_VO_Header__c</referenceTo>
        <relationshipLabel>Return VO Line Items</relationshipLabel>
        <relationshipName>Return_VO_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Return VO Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RVOLI-{00000000}</displayFormat>
        <label>Return VO Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return VO Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>